--- a/scripts/scss/_partials/text-columns.scss
+++ b/scripts/scss/_partials/text-columns.scss
@@ -318,6 +318,17 @@
   }
 }
 
+/* first child overlay */
+
+@include medium-down {
+  .section.section--image-overlay:first-child {
+    
+    .image--caption {
+      mix-blend-mode: difference;
+    }
+  }
+}
+
 //==========================================
 // accordion
 //==========================================
