--- a/scripts/scss/_partials/header.scss
+++ b/scripts/scss/_partials/header.scss
@@ -97,11 +97,8 @@ body[dataNavigation] {
     
     @include medium-down {
       justify-content: flex-end;
-      left: 0;
       padding: var(--margin);
-      right: auto;
-      transform: translateX(-100%);
-      width: 25vw;
+      width: 50vw;
     }
     
     .nav--item__footer {
@@ -140,6 +137,9 @@ body[dataNavigation] {
         transform: translateY(calc(-5vw - 50%));
       }
     }
+  }
+  
+  .nav--item {
     
     &:nth-child(2){
       height: 50vh;
@@ -148,7 +148,7 @@ body[dataNavigation] {
       z-index: 9;
       
       @include medium-down {
-        width: 50vw;
+        width: 66.66666vw; 
       }
     }
     &:nth-child(3){
@@ -158,7 +158,7 @@ body[dataNavigation] {
       z-index: 8;
       
       @include medium-down {
-        width: 75vw;
+        width: 83.33333vw;
       }
     }
     &:nth-child(4){
@@ -427,7 +427,7 @@ body {
     transform: none !important;;
     
     svg {
-      height: 24px;
+      height: 20px;
       
       * {
         fill: white;
@@ -490,6 +490,10 @@ body {
   > span {
     position: relative;
     width: calc(4 * var(--colWidth));
+    
+    @include medium-down {
+      width: 66.6666vw;
+    }
   }
   > span svg {
     left: 50%;
